packages/taquito-michel-codec/test/contracts_015/ill_typed/big_drop.tz
parameter unit;
storage unit;
code { DROP 1073741824; # = 0x3fffffff + 1
       DROP; }
